test/code/test_class_const_noexist.php
<?php

class A {}

$a = new A;
print $a::NO_EXISTS_THIS_CONST . "\n";

